fix select update

--- a/inst/css/materialize-body.css
+++ b/inst/css/materialize-body.css
@@ -19,17 +19,12 @@
   }
 }
 
-
 .materialize-page {
   height: 100vmin;
   position: relative;
 }
 
-
-.show {
-  display: block;
-}
-
-.hide {
-  display: none;
+.container {
+  max-width: none !important;
+   width: 95% !important;;
 }
