--- a/inst/materializer/css/materialize-body.css
+++ b/inst/materializer/css/materialize-body.css
@@ -1,4 +1,5 @@
 .materialize-body {
+  height: 100vmin;
   position: relative;
 }
 
@@ -19,6 +20,7 @@
 }
 
 .materialize-page {
+  height: 100vmin;
   position: relative;
 }
 
